plugins {
	id 'org.springframework.boot' version '2.1.4.RELEASE'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.alexm'
//version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'
archivesBaseName = 'bear-spendings'

repositories {
	mavenCentral()
}

ext {
	junitVersion = '5.3.2'
}

dependencies {
	implementation (project(':angular-ui'))
//	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	compile 'com.google.guava:guava:28.0-jre'

	compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'com.h2database:h2'

	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
		exclude  group: 'junit' , module:'junit'
	}
	testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
	testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.4'
	testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
//	testImplementation 'org.springframework.security:spring-security-test'

}

test {
	useJUnitPlatform()
}
